updated app routes

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,4 @@
-<h1>This is a singup page</h1>
+<h1>This is a sign up page</h1>
 
-<a href="/login">Log in here, if existing user</a>
+<a href="/">Log in here, if existing user</a>
 
