--- a/templates/login.html
+++ b/templates/login.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
 <body>
     <h1>This is a login page</h1>
-
+    <form action='#' method="post">
+        <p>name:</p>
+        <p><input type ='text' name='name'></p>
+        <p><input type ='submit' value='submit'></p>
+    </form>
     <a href="/signup">Sign up here, if not a user</a>
 </body>
 </html>
